force-app/main/default/objects/Progress_Card__c/Progress_Card__c.object-meta.xml
<CustomObject>
    <label>Progress Card</label>
    <nameField>
        <label>Progress Card Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Progress Cards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>