force-app/main/default/objects/Progress_Card__c/fields/Exam__c.field-meta.xml
<CustomField>
    <fullName>Exam__c</fullName>
    <label>Exam</label>
    <referenceTo>Examination__c</referenceTo>
    <relationshipLabel>Exam</relationshipLabel>
    <relationshipName>Progress_Cards</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>