force-app/main/default/objects/Progress_Card__c/fields/Marks_Scored__c.field-meta.xml
<CustomField>
    <fullName>Marks_Scored__c</fullName>
    <label>Marks Scored</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>